# RoboticsDynamics

./: Base_Parameters.txt  README.md
TrajectoryByDE/Test1_15s/: 100Gen5D.fig  Trajectory.mat  ddq.txt  dq.txt  parameters.mat  q.txt
TrajectoryByDE/Test2_15s/: 100Gen5D.fig  Trajectory.mat  ddq.txt  dq.txt  parameter.mat  q.txt
TrajectoryByDE/Test3_15s/: 100Gen5D.fig  Trajectory.mat  ddq.txt  dq.txt  parameter.mat  q.txt
simulation-data/Simscape/: XM7p_new.slx  XM7p_new.slxc  rst_sim.m
simulation-data/Simscape/slprj/sim/varcache/XM7p_new/: checksumOfCache.mat  varInfo.mat
simulation-data/Simscape/slprj/sim/varcache/XM7p_new/tmwinternal/: simulink_cache.xml
simulation-data/Trajectory/: F5T20-num2000.mat  F5T20-num500.mat  readme.txt
simulation-data/URDF/XM7p/: CMakeLists.txt  package.xml
simulation-data/URDF/XM7p/launch/: display.launch  gazebo.launch
simulation-data/URDF/XM7p/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL
simulation-data/URDF/XM7p/urdf/: XM7p.csv  XM7p.urdf
